* UI: Allowed Image controls to optionally display a different image when the mouse is hovering over them (ui_control_t->image_path_on_hover), set with the UI_SetImageOnHover function
	* Added hover images for team select menu
* Renamed MSG_ReadLong and MSG_WriteLong to MSG_ReadInt and MSG_WriteInt
* Made the healthbar numbers slightly brighter
* Refactored fatal error code


REMOVALS:
* Removed v_centerspeed cvar (was already dead)
* Removed v_centermove cvar (was already dead)
* Removed viewpos command (cl_showinfo 1 far superior and duplicates functionality)
* Removed joystick support (code sucks, only obsolete joysticks supported, DirectInput only, non-portable, not even supported on Linux it seems?)
	* Removed joy_name cvar
	* Removed joy_advanced cvar
	* Removed joy_advaxisx cvar
	* Removed joy_advaxisy cvar
	* Removed joy_advaxisz cvar
	* Removed joy_advaxisr cvar
	* Removed joy_advaxisu cvar
	* Removed joy_advaxisv cvar
	* Removed joy_forwardthreshold cvar
	* Removed joy_sidethreshold cvar
	* Removed joy_pitchthreshold cvar
	* Removed joy_yawthreshold cvar
	* Removed joy_forwardsensitivity cvar
	* Removed joy_sidesensitivity cvar
	* Removed joy_pitchsensitivity cvar
	* Removed joy_yawsensitivity cvar
	* Removed joy_upthreshold cvar
	* Removed joy_upsensitivity cvar
* Removed duplicated vector code
* Removed cl_stats cvar (replaced with cl_showpos)
* Removed "test" rendering code:
	* Removed cl_testblend cvar
	* Removed cl_testentities cvar
	* Removed cl_testlights cvar
	* Removed cl_testparticles cvar
* Removed svc_nop protocol message (was useless)
* Removed F2 menu to view hotkeys (was useless)
	* Removed "inven" command
	* Removed svc_inventory protocol message
* Removed maxentities cvar (ignored by client and server)
	* game->maxentities is now set to MAX_EDICTS

Version 0.0.6.161 (Build 161)
April 6, 2024
* Fixed typing lowercase in chat (workaround)
* Fixed panning up and down on playtest builds
* Fixed the game functioning on some computers
